--- a/Page Drink/PageDrink.html
+++ b/Page Drink/PageDrink.html
@@ -1,151 +1,199 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gutes Trinken</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Beer Jerman</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
-    * {
+    body {
+      font-family: 'Montserrat', Arial, sans-serif;
+      background: linear-gradient(135deg, #f8fafc 60%, #e0e7ef 100%);
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
     }
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f9f9f9;
+    .navbar {
+      background-color: rgba(0, 0, 0, 0.8);
+      border: none;
     }
-    nav {
-      background-color: #222;
-      padding: 10px 20px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-    nav .logo {
-      color: white;
-      font-size: 1.5em;
-      font-weight: bold;
-    }
-    nav ul {
-      list-style: none;
-      display: flex;
-      gap: 20px;
-    }
-    nav ul li a {
-      color: white;
-      text-decoration: none;
+    .nav-link, .navbar-brand {
+      color: #fff;
       font-weight: 500;
+      letter-spacing: 1px;
     }
-    .hero {
-      background-image: url(img/AsepBalap.jpg); /* Beer image */
-      background-size: cover;
-      background-position: center;
-      height: 300px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: white;
-      position: relative;
+    .nav-link:hover {
+      background-color: rgba(255, 255, 255, 0.15);
+      border-radius: 5px;
+      transition: 0.3s;
     }
-    .hero::before {
-      content: "";
-      position: absolute;
-      top: 0; left: 0;
+    .hero-image {
       width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.4);
-    }
-    .hero h1 {
-      position: relative;
-      z-index: 1;
-      font-size: 2.5em;
-    }
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      padding: 30px;
-      max-width: 1200px;
-      margin: auto;
-    }
-    .card {
-      background-color: white;
-      border-radius: 8px;
-      overflow: hidden;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    }
-    .card img {
-      width: 100%;
-      height: 200px;
+      max-height: 400px;
       object-fit: cover;
+      margin-top: 56px;
+      filter: brightness(0.85);
+      box-shadow: 0 4px 24px rgba(0,0,0,0.08);
+      animation: 1.5s;
     }
-    .card .text {
-      padding: 15px;
+    .content {
+      padding: 2rem 0;
     }
-    .card .text h3 {
-      margin-bottom: 5px;
+    .section-title {
+      font-size: 2.3rem;
+      font-weight: 700;
+      color: #2c3e50;
+      margin-bottom: 1.2rem;
+      text-align: center;
+      letter-spacing: 2px;
     }
-    .card .text a {
-      display: inline-block;
-      margin-top: 10px;
-      color: #007BFF;
-      text-decoration: none;
+    .sosis-list li {
+      margin-bottom: 0.8rem;
+      font-size: 1.13rem;
+    }
+    .fun-fact {
+      background: #fffbe7;
+      padding: 18px 20px;
+      border-radius: 10px;
+      font-style: italic;
+      margin: 2rem 0 2rem 0;
+      font-size: 1.1rem;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.03);
+    }
+    .img-beer {
+      width: 100%;
+      max-width: 600px;
+      height: auto;
+      display: block;
+      margin: 35px auto 10px auto;
+      border-radius: 15px;
+      box-shadow: 0 4px 16px rgba(0,0,0,0.08);
+      transition: transform 0.3s;
+    }
+    .img-beer:hover {
+      transform: scale(1.04);
+    }
+    .gallery-title {
+      font-weight: 600;
+      color: #34495e;
+      margin-top: 2.5rem;
+      margin-bottom: 1rem;
+      text-align: center;
+    }
+    .gallery {
+      display: flex;
+      gap: 18px;
+      flex-wrap: wrap;
+      justify-content: center;
+      margin-bottom: 2.5rem;
+    }
+    .gallery img {
+      width: 170px;
+      height: 120px;
+      object-fit: cover;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.07);
+    }
+    .gallery img:hover {
+      transform: scale(1.07);
+      box-shadow: 0 4px 18px rgba(0,0,0,0.15);
+    }
+    .tips-box {
+      background: #e3f7f7;
+      padding: 18px 20px;
+      border-radius: 10px;
+      margin-bottom: 2rem;
+      font-size: 1.07rem;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.03);
+    }
+    .footer {
+      background-color: #222;
+      color: white;
+      text-align: center;
+      padding: 22px 10px 16px 10px;
+      position: relative;
+      margin-top: 2rem;
+      font-size: 1rem;
+    }
+    .back-to-top {
+      position: absolute;
+      right: 18px;
+      top: 18px;
+      font-weight: 600;
+    }
+    .back-to-top:hover {
+      color: #fff;
+      text-decoration: underline;
+    }
+    .navbar-brand{
+        color: rgb(0, 140, 255);
     }
   </style>
 </head>
 <body>
-
-  <nav>
-    <div class="logo">Gutes Trinken</div>
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Drinks</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
+  <nav class="navbar navbar-expand-lg fixed-top position-absolute navbar-dark">
+    <div class="container-fluid px-4">
+      <a class="navbar-brand fw-bold" href="home.html">gutes Essen</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarContent">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Food</a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Sausage</a></li>
+              <li><a class="dropdown-item" href="#">Schnitzel</a></li>
+            </ul>
+          </li>
+          <li class="nav-item"><a class="nav-link" href="#minuman">Drink</a></li>
+          <li class="nav-item"><a class="nav-link" href="#fakta">Fact</a></li>
+          <li class="nav-item"><a class="nav-link" href="#kontak">Contact Us</a></li>
+        </ul>
+      </div>
+    </div>
   </nav>
 
-  <div class="hero">
-    <h1>Lorem Ipsum Dolor jamet</h1>
+  <img src="img/AsepBalap.jpg" alt="Beer Jerman" class="hero-image w-100">
+
+  <div class="content container">
+    <h1 class="section-title">Minuman Terkenal di Jerman</h1>
+    <p class="text-center mb-4">
+      Jerman tidak hanya terkenal karena makanannya, tapi juga memiliki berbagai <b>minuman khas</b> yang unik dan beragam. Mulai dari bir klasik hingga minuman non-alkohol tradisional yang menyegarkan
+    </p>
+    <ul class="sosis-list">
+      <li><strong>Weißbier</strong> - Bir gandum khas Bavaria dengan rasa ringan dan sedikit manis.</li>
+      <li><strong>Glühwein</strong> - Minuman anggur hangat yang dibumbui, populer saat musim dingin dan pasar Natal.</li>
+      <li><strong>Apfelschorle</strong> - Campuran jus apel dan air soda, segar dan populer sebagai minuman sehari-hari.</li>
+      <li><strong>Schorle anggur</strong> - Anggur putih dicampur dengan air soda, menjadi minuman ringan yang menyegarkan.</li>
+    </ul>
+    
+    <div class="fun-fact">
+      <b>Fun Fact:</b> Jerman memiliki lebih dari <b>1.300 pabrik bir</b> dan lebih dari 5.000 merek bir yang berbeda. Negara ini juga menjadi tuan rumah <b>Oktoberfest</b>, festival bir terbesar di dunia!
+    </div>
+
+    <img src="img/GermanBeer.jpeg" alt="Beer" class="img-beer">
+
+    <h2 class="gallery-title">Galeri Beer Jerman</h2>
+    <div class="gallery">
+      <img src="img/Apfelschorle.jpg" alt="Apfelschorle">
+      <img src="img/Beer.jpg" alt="Beer">
+      <img src="img/Radler.jpg" alt="Radler">
+      <img src="img/Spezi.jpg" alt="Spezi">
+    </div>
+
+    <div class="tips-box">
+       <b>Tips Menikmati:</b> Bir Jerman paling nikmat disajikan dalam gelas dingin. Untuk non-alkohol, Apfelschorle cocok diminum saat cuaca panas. Minuman seperti Glühwein lebih pas dinikmati saat musim dingin.
+    </div>
+
+    <p class="text-center">
+       Jika kamu berkesempatan berkunjung ke Jerman, cobalah berbagai jenis minumannya! Dari festival bir hingga kafe kecil, semuanya menawarkan pengalaman rasa yang otentik dan khas.
+    </p>
   </div>
 
-  <div class="grid">
-    <div class="card">
-      <img src=img/Beer.jpg alt="Beer">
-      <div class="text">
-        <h3>Bir Jerman</h3>
-        <p>Minuman paling ikonik dari Jerman, tersedia dalam berbagai jenis.</p>
-        <a href="#">Selengkapnya</a>
-      </div>
-    </div>
-
-    <div class="card">
-      <img src=img/Apfelschorle.jpg alt="Apfelschorle">
-      <div class="text">
-        <h3>Apfelschorle</h3>
-        <p>Campuran jus apel dan air soda yang menyegarkan.</p>
-        <a href="#">Selengkapnya</a>
-      </div>
-    </div>
-
-    <div class="card">
-      <img src=img/Spezi.jpg alt="Spezi">
-      <div class="text">
-        <h3>Spezi</h3>
-        <p>Minuman unik campuran cola dan orange soda, populer di Bavaria.</p>
-        <a href="#">Selengkapnya</a>
-      </div>
-    </div>
-
-    <div class="card">
-      <img src=img/Radler.jpg alt="Radler">
-      <div class="text">
-        <h3>Radler</h3>
-        <p>Kombinasi antara bir dan lemonade, ringan dan cocok untuk musim panas.</p>
-        <a href="#">Selengkapnya</a>
-      </div>
-    </div>
+  <div class="footer">
+    <a href="#" class="back-to-top">↑ Back to top</a>
+    <p>Copyright by ©gutes Essen 2025. All rights reserved.</p>
   </div>
-
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
