--- a/home.html
+++ b/home.html
@@ -115,7 +115,7 @@
     </div>
     <div class="col-md-6">
         <div class="card post-card">
-            <img src="img/schnitzel.jpg" class="card-img-top" alt="Post">
+            <img src="img/Beef Schnitzel.jpg" class="card-img-top" alt="Post">
             <div class="card-overlay"></div>
             <div class="card-body">
                 <h5 class="card-title">Beef Schnitzel</h5>
@@ -175,6 +175,6 @@
         <p>Copyright by ©gutes Essen 2025. All rights reserved.</p>
     </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script src="js/main.js"></script>
+<script src="js/home.js"></script>
 </body>
 </html>
